--- a/src/UI/AddArticleWindow/addArticleWindow.fxml
+++ b/src/UI/AddArticleWindow/addArticleWindow.fxml
@@ -74,8 +74,11 @@
       </Label>
       <TextField fx:id="secondSourceField" maxWidth="300.0" minWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
       <Button mnemonicParsing="false" onAction="#addButton" prefHeight="25.0" prefWidth="149.0" text="Add" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-      <RadioButton fx:id="firstChoice" mnemonicParsing="false" selected="true" text="Electronic" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <RadioButton fx:id="secondChoice" mnemonicParsing="false" text="Paper" GridPane.columnIndex="1" GridPane.rowIndex="5">
+      <RadioButton fx:id="firstChoice" mnemonicParsing="false" selected="true" text="Electronic" GridPane.columnIndex="1" GridPane.rowIndex="5">
+         <toggleGroup>
+            <ToggleGroup fx:id="toggleGroup" />
+         </toggleGroup></RadioButton>
+      <RadioButton fx:id="secondChoice" mnemonicParsing="false" text="Paper" toggleGroup="$toggleGroup" GridPane.columnIndex="1" GridPane.rowIndex="5">
          <GridPane.margin>
             <Insets left="151.0" />
          </GridPane.margin>
