--- a/src/UI/AddPhotoWindow/addPhotoWindow.fxml
+++ b/src/UI/AddPhotoWindow/addPhotoWindow.fxml
@@ -97,7 +97,7 @@
             <Insets left="151.0" />
          </GridPane.margin>
       </TextField>
-      <Button mnemonicParsing="false" onAction="#addButton" prefHeight="25.0" prefWidth="149.0" text="Add" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+      <Button fx:id="addButton" mnemonicParsing="false" onAction="#addButtonAction" prefHeight="25.0" prefWidth="149.0" text="Add" GridPane.columnIndex="1" GridPane.rowIndex="8" />
       <RadioButton fx:id="firstChoice" mnemonicParsing="false" selected="true" text="Blanc" GridPane.columnIndex="1" GridPane.rowIndex="5">
          <toggleGroup>
             <ToggleGroup fx:id="toggleGroup" />
