--- a/src/window/addphotowindow/AddPhotoWindow.fxml
+++ b/src/window/addphotowindow/AddPhotoWindow.fxml
@@ -2,11 +2,11 @@
 
 <?import java.lang.*?>
 <?import javafx.geometry.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-<GridPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.AddArticleWindow.AddArticleWindowController">
+<GridPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="window.addphotowindow.AddPhotoWindowController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="205.0" prefWidth="205.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="399.0" minWidth="10.0" prefWidth="396.0" />
@@ -19,9 +19,11 @@
       <RowConstraints maxHeight="40.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="40.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="40.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="40.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="40.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label fx:id="titleLabel" text="Create new Article">
+      <Label fx:id="titleLabel" text="Create new Photo">
          <font>
             <Font name="Times New Roman" size="24.0" />
          </font>
@@ -56,7 +58,7 @@
       <TextField fx:id="titreField" maxWidth="300.0" minWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <TextField fx:id="auteurField" maxWidth="300.0" minWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       <TextField fx:id="sourceField" maxWidth="300.0" minWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <Label fx:id="secondSourceLabel" text="Long Source:" GridPane.rowIndex="4">
+      <Label fx:id="secondSourceLabel" text="Photo Source:" GridPane.rowIndex="4">
          <font>
             <Font name="Times New Roman" size="18.0" />
          </font>
@@ -64,7 +66,23 @@
             <Insets left="20.0" />
          </GridPane.margin>
       </Label>
-      <Label fx:id="radioLabel" text="Article Type:" GridPane.rowIndex="5">
+      <Label fx:id="photoTypeLabel" text="Photo Type:" GridPane.rowIndex="6">
+         <font>
+            <Font name="Times New Roman" size="18.0" />
+         </font>
+         <GridPane.margin>
+            <Insets left="20.0" />
+         </GridPane.margin>
+      </Label>
+      <Label fx:id="radioLabel" text="Phtoto Color:" GridPane.rowIndex="5">
+         <font>
+            <Font name="Times New Roman" size="18.0" />
+         </font>
+         <GridPane.margin>
+            <Insets left="20.0" />
+         </GridPane.margin>
+      </Label>
+      <Label fx:id="photoResolutionLabel" text="Phtoto Resolution:" GridPane.rowIndex="7">
          <font>
             <Font name="Times New Roman" size="18.0" />
          </font>
@@ -73,15 +91,22 @@
          </GridPane.margin>
       </Label>
       <TextField fx:id="secondSourceField" maxWidth="300.0" minWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-      <Button fx:id="addButton" mnemonicParsing="false" onAction="#addButtonAction" prefHeight="25.0" prefWidth="149.0" text="Add" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-      <RadioButton fx:id="firstChoice" mnemonicParsing="false" selected="true" text="Electronic" GridPane.columnIndex="1" GridPane.rowIndex="5">
+      <TextField fx:id="resolutionFieldWidth" maxWidth="149.0" minWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+      <TextField fx:id="resolutionFieldHeight" maxWidth="149.0" minWidth="149.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
+         <GridPane.margin>
+            <Insets left="151.0" />
+         </GridPane.margin>
+      </TextField>
+      <Button fx:id="addButton" mnemonicParsing="false" onAction="#addButtonAction" prefHeight="25.0" prefWidth="149.0" text="Add" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+      <RadioButton fx:id="firstChoice" mnemonicParsing="false" selected="true" text="Blanc" GridPane.columnIndex="1" GridPane.rowIndex="5">
          <toggleGroup>
             <ToggleGroup fx:id="toggleGroup" />
          </toggleGroup></RadioButton>
-      <RadioButton fx:id="secondChoice" mnemonicParsing="false" text="Paper" toggleGroup="$toggleGroup" GridPane.columnIndex="1" GridPane.rowIndex="5">
+      <RadioButton fx:id="secondChoice" mnemonicParsing="false" text="Noir" toggleGroup="$toggleGroup" GridPane.columnIndex="1" GridPane.rowIndex="5">
          <GridPane.margin>
             <Insets left="151.0" />
          </GridPane.margin>
       </RadioButton>
+      <ChoiceBox fx:id="dropDownList" maxWidth="300.0" minWidth="300.0" prefHeight="25.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
    </children>
 </GridPane>
